# minecraft.py

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  pyproject.toml  requirements-auth.txt  requirements.txt  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/ISSUE_TEMPLATES/: bug_report.yml
.github/workflows/: black.yml  lint.yml  pr-title.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: auth.rst  client.rst  datatypes.rst  enums.rst  exceptions.rst  index.rst  nbt.rst  version.rst
docs/api/networking/: connection.rst  dispatcher.rst  encryption.rst  index.rst  reactors.rst
docs/api/packets/: handshake.rst  index.rst  login.rst  play.rst  status.rst
examples/: connect.py
minecraft/: __init__.py  auth.py  client.py  command_parsers.py  datatypes.py  enums.py  exceptions.py
minecraft/networking/: __init__.py  connection.py  dispatcher.py  encryption.py
minecraft/networking/reactors/: __init__.py  base.py  login.py  play.py
minecraft/packets/: __init__.py  _datatypes.py  base.py  handshake.py  handshake_serverbound.py  login.py  login_clientbound.py  login_serverbound.py  play.py  play_clientbound.py  play_serverbound.py  status.py  status_clientbound.py  status_serverbound.py
